# sage

./: CMakeLists.txt  sageConfig.cmake  todo.txt
cmake/Hunter/: config.cmake
cmake/configs/: default.cmake
doc/: Doxyfile
doc/html/: Application_8h_source.html  AudioCache_8h_source.html  AudioManager_8h_source.html  EventDispatcher_8h_source.html  FileCache_8h_source.html  FontCache_8h_source.html  ImageCache_8h_source.html  NodePtrZCompare_8h_source.html  Node_8h_source.html  Scene_8h_source.html  ShaderCache_8h_source.html  Sprite_8h_source.html  TextNode_8h_source.html  TexturedNode_8h_source.html  ThreadManager_8h_source.html  annotated.html  classes.html  classsage_1_1Application-members.html  classsage_1_1Application.html  classsage_1_1AudioCache-members.html  classsage_1_1AudioCache.html  classsage_1_1AudioManager-members.html  classsage_1_1AudioManager.html  classsage_1_1EventDispatcher-members.html  classsage_1_1EventDispatcher.html  classsage_1_1FileCache-members.html  classsage_1_1FileCache.html  classsage_1_1FontCache-members.html  classsage_1_1FontCache.html  classsage_1_1ImageCache-members.html  classsage_1_1ImageCache.html  classsage_1_1Node-members.html  classsage_1_1Node.html  classsage_1_1Scene-members.html  classsage_1_1Scene.html  classsage_1_1ShaderCache-members.html  classsage_1_1ShaderCache.html  classsage_1_1Sprite-members.html  classsage_1_1Sprite.html  classsage_1_1TextNode-members.html  (+24 more)
doc/latex/: annotated.tex  classsage_1_1Application.tex  classsage_1_1AudioCache.tex  classsage_1_1AudioManager.tex  classsage_1_1EventDispatcher.tex  classsage_1_1FileCache.tex  classsage_1_1FontCache.tex  classsage_1_1ImageCache.tex  classsage_1_1Node.eps  classsage_1_1Node.tex  classsage_1_1Scene.tex  classsage_1_1ShaderCache.tex  classsage_1_1Sprite.eps  classsage_1_1Sprite.tex  classsage_1_1TextNode.tex  classsage_1_1TexturedNode.tex  classsage_1_1ThreadManager.tex  hierarchy.tex  refman.tex  structsage_1_1NodePtrZCompare.tex
docs/: Doxyfile
docs/html/: Application_8cpp.html  Application_8h.html  Application_8h_source.html  AudioCache_8cpp.html  AudioCache_8h.html  AudioCache_8h_source.html  AudioManager_8cpp.html  AudioManager_8h.html  AudioManager_8h_source.html  BasicRenderer_8cpp.html  BasicRenderer_8h.html  BasicRenderer_8h_source.html  ColorNode_8cpp.html  ColorNode_8h.html  ColorNode_8h_source.html  DepthPeelRenderer_8cpp.html  DepthPeelRenderer_8h.html  DepthPeelRenderer_8h_source.html  EventDispatcher_8cpp.html  EventDispatcher_8h.html  EventDispatcher_8h_source.html  EventDispatcher_8tpp.html  Events_8h.html  Events_8h_source.html  FileCache_8cpp.html  FileCache_8h.html  FileCache_8h_source.html  FontCache_8cpp.html  FontCache_8h.html  FontCache_8h_source.html  ImageCache_8cpp.html  ImageCache_8h.html  ImageCache_8h_source.html  NodePtrZCompare_8cpp.html  NodePtrZCompare_8h.html  NodePtrZCompare_8h_source.html  Node_8cpp.html  Node_8h.html  Node_8h_source.html  Renderer_8cpp.html  (+165 more)
docs/latex/: Application_8cpp.tex  Application_8h.tex  AudioCache_8cpp.tex  AudioCache_8h.tex  AudioManager_8cpp.tex  AudioManager_8h.tex  BasicRenderer_8cpp.tex  BasicRenderer_8h.tex  ColorNode_8cpp.tex  ColorNode_8h.tex  DepthPeelRenderer_8cpp.tex  DepthPeelRenderer_8h.tex  EventDispatcher_8cpp.tex  EventDispatcher_8h.tex  EventDispatcher_8tpp.tex  Events_8h.tex  FileCache_8cpp.tex  FileCache_8h.tex  FontCache_8cpp.tex  FontCache_8h.tex  ImageCache_8cpp.tex  ImageCache_8h.tex  NodePtrZCompare_8cpp.tex  NodePtrZCompare_8h.tex  Node_8cpp.tex  Node_8h.tex  Renderer_8cpp.tex  Renderer_8h.tex  Renderer_8tpp.tex  Scene_8cpp.tex  Scene_8h.tex  ShaderCache_8cpp.tex  ShaderCache_8h.tex  Sprite_8cpp.tex  Sprite_8h.tex  TextNode_8cpp.tex  TextNode_8h.tex  TexturedNode_8cpp.tex  TexturedNode_8h.tex  ThreadManager_8cpp.tex  (+67 more)
glsl/: basicColor_fragment.glsl  basicColor_vertex.glsl  basicTexture_fragment.glsl  basicTexture_vertex.glsl  depthpeelColor_fragment.glsl  depthpeelColor_vertex.glsl  depthpeelTexture_fragment.glsl  depthpeelTexture_vertex.glsl  fullscreenTexture_fragment.glsl  fullscreenTexture_vertex.glsl  stencil2d_fragment.glsl  stencil2d_vertex.glsl  textured2d_fragment.glsl  textured2d_vertex.glsl
include/sage/: Application.h  AudioCache.h  AudioManager.h  FileCache.h  FontCache.h  ImageCache.h  Node.h  Scene.h  ShaderCache.h  Sprite.h  TextNode.h  config.h  macros.h  ogl.h  sage.h
platform/: android.cmake  i686-w64-mingw32.cmake  x86_64-w64-mingw32.cmake
platform/android/: build.gradle  toolchain.cmake.in
src/: Application.cpp  AudioManager.cpp  Node.cpp  Scene.cpp  Sprite.cpp  TextNode.cpp
src/cache/: AudioCache.cpp  FileCache.cpp  FontCache.cpp  ImageCache.cpp  ShaderCache.cpp
src/renderer/: BasicRenderer.cpp  DepthPeelRenderer.cpp  Renderer.cpp
src/util/: AudioManager.cpp  EventDispatcher.cpp  NodePtrZCompare.cpp  ThreadManager.cpp
(+137 files in other folders)
